# CivilRightsSummarizedAI

./: .env.example  .gitattributes  .gitignore  20260410_Final_Presentation_Plan_CivilRightsSummarizedAI.md  20260410_Final_Presentation_Plan_CivilRightsSummarizedAI.pptx  Civil_Rights_AI_Progress.pptx  FINAL_SUBMISSION.md  INSTALL.md  LICENSE  LICENSE.md  README.md  REPORT.md  SHARING_PLAN.md  TUTORIAL.md  environment.yml  plan.md  pyproject.toml
Examples/: README.md
archive/: README.md
data/fixtures/: README.md  eval_scores.jsonl  eval_summary.json  final_report_metrics.json  mock_dataset.json  test_chunk_counts.json  trainer_state.json
data/training/: README.md
docs/: README.md
docs/images/: README.md
docs/package_name/: README.md
environments/: README.md
eval/: config.py  evaluate.py  generate.py
notebooks/: figure_instructions.ipynb
package_name/: README.md  __init__.py  module1.py  module2.py
package_name/test/: __init__.py  (+2 more)
runs/: README.md
scripts/: README.md  benchmark_claude.py  doc_classifier.py  eval_checkpoint.py  eval_checkpoint_v2.py  eval_ckpt3690.sbatch  fetch_document.py  hydrate_document_text.py  md_to_pdf.py  prepare_data.sbatch  prepare_training_data.py  summary_qa.py  train_lora.py  train_run2.sbatch  train_run2_polish.sbatch  train_run2_resume.sbatch
tests/: test_docs_consistency.py  test_ingestion_resilience.py  test_mock_ingestion.py
tools/: README.md  case-summary-evaluator.html  case-summary-generator.html  case_review_tool.html  case_review_tool.py  clearinghouse_api_proxy.py  summary_qa_standalone.html
(+15 files in other folders)
