[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civil-rights-summarizer"
version = "0.1.0"
description = "Ingestion + summarization tooling for Clearinghouse civil rights cases"
authors = [
    {name = "Capstone Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "typer>=0.9",
    "rich>=13.7",
    "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "black>=24.2",
    "mypy>=1.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "ANN", "UP"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_configs = true
warn_return_any = true
